packages/online-editor/static/kubernetes/kie-sandbox-dev-deployments-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-apiserver-proxy
  namespace: default
  labels:
    app: kube-apiserver-proxy
    deploymentconfig: kube-apiserver-proxy
spec:
  containers:
    - name: kube-apiserver-proxy
      image: alpine/curl:latest
      command: ["/bin/sh"]
      args:
        - -c
        - >-
          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" &&
          chmod +x kubectl &&
          ./kubectl proxy --address 0.0.0.0 --port 8051 --accept-hosts '^*$'
      ports:
        - containerPort: 8051
---
apiVersion: v1
kind: Service
metadata:
  name: kube-apiserver-proxy
  namespace: default
spec:
  ports:
    - name: 8051-tcp
      protocol: TCP
      port: 8051
      targetPort: 8051
  selector:
    app: kube-apiserver-proxy
    deploymentconfig: kube-apiserver-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-apiserver-proxy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /kube-apiserver(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kube-apiserver-proxy
                port:
                  number: 8051
---
kind: Namespace
apiVersion: v1
metadata:
  name: local-kie-sandbox-dev-deployments
